# schema-org-json-ld

./: .gitignore  .php-cs-fixer.dist.php  AGENTS-ts.md  AGENTS.md  CHANGELOG.md  CLAUDE_CLOUD_TEST.md  COMPLETION_CHECKLIST.md  COMPLETION_CHECKLIST.xml  JOURNAL.md  LICENSE  README.md  STARTUP_CHECKLIST.md  STARTUP_CHECKLIST.xml  audit-ack-160.json  biome.json  composer.json  package-lock.json  package.json  phpstan.neon  tsconfig.json
.claude/skills/: github-issues-comments.md  orchestrator-permissions.md  pr-review-workflow.md  schema-implementation.md
.github/: copilot-setup-steps.yml
.github/workflows/: ci-hook-test-run.yml  ci-hook-test-settings.json  ci-rust.yml  ci-ts.yml  claude-scheduled-test.yml  claude.yml  main.yml  npm-publish.yml  orchestrator-cron.yml  orchestrator-prompt.md  orchestrator-prompt.xml  orchestrator-redesign-prompt.xml  orchestrator.yml  pizza-pipeline.yml  pizza-settings.json  publish-npm.yml
doc/adr/: 0001-record-architecture-decisions.md  0002-product-offers-union-type.md  0003-reflection-based-serialization.md  (+13 more)
docs/: .tmp-comment.md  .tmp-dispatch-3a.json  STATE_SCHEMA_CHANGELOG.md  draft-phase-2a-enums.json  draft-phase-2b-leaf-subtypes.json  draft-phase-2c-leaf-subtypes-2.json  draft-phase-3b-level1.json  draft-phase-3c-level2.json  draft-phase-3d-level3-5.json  draft-phase-3e-level5-6.json  draft-phase-3f-level7.json  draft-phase-3g-level8.json  review-body-410.md  state.json
scripts/: verify-build.mjs
tools/: README.md  _build-helper.sh  agent-status  backfill-dispatch  backfill-merged-at  backfill-sessions  check-agent-prs  check-commitments  check-doc-pr  check-eva-responses  check-field-inventory-rs  check-field-inventory.jq  close-session  comment-issue  commit-state-change  config.json  create-audit-inbound  create-issue  cross-repo  cycle-close  cycle-complete  cycle-phase  cycle-receipts  cycle-runner  cycle-start  cycle-status  derive-metrics  dispatch-agent  dispatch-docs  dispatch-review  dispatch-task  git-reset-guard  housekeeping-scan  merge-pr  metric-snapshot  parity-check.ts  patch-pipeline  pipeline-check  post-opening  post-step  (+19 more)
tools/rust/crates/backfill-dispatch/: Cargo.toml
tools/rust/crates/backfill-dispatch/src/: main.rs
tools/rust/crates/backfill-merged-at/: Cargo.toml
tools/rust/crates/backfill-merged-at/src/: main.rs
tools/rust/crates/backfill-sessions/: Cargo.toml
tools/rust/crates/backfill-sessions/src/: main.rs
tools/rust/crates/check-agent-prs/: Cargo.toml
tools/rust/crates/check-agent-prs/src/: main.rs
tools/rust/crates/check-commitments/: Cargo.toml
tools/rust/crates/check-commitments/src/: main.rs
tools/rust/crates/check-doc-pr/: Cargo.toml
tools/rust/crates/check-doc-pr/src/: main.rs
tools/rust/crates/check-eva-responses/: Cargo.toml
tools/rust/crates/check-eva-responses/src/: main.rs
tools/rust/crates/check-field-inventory/: Cargo.toml
tools/rust/crates/check-field-inventory/src/: main.rs
tools/rust/crates/close-session/: Cargo.toml
tools/rust/crates/close-session/src/: main.rs
tools/rust/crates/cross-repo/: Cargo.toml
tools/rust/crates/cross-repo/src/: main.rs
tools/rust/crates/cycle-close/: Cargo.toml
tools/rust/crates/cycle-close/src/: main.rs
tools/rust/crates/cycle-complete/: Cargo.toml
tools/rust/crates/cycle-complete/src/: main.rs
tools/rust/crates/cycle-complete/tests/: auto_cycle.rs  pushes_to_remote.rs
tools/rust/crates/cycle-receipts/: Cargo.toml
tools/rust/crates/cycle-receipts/src/: main.rs
tools/rust/crates/cycle-runner/: Cargo.toml
tools/rust/crates/cycle-runner/src/: close_out.rs  git.rs  main.rs  review_body.rs  runner.rs  startup.rs  steps.rs
tools/rust/crates/cycle-status/: Cargo.toml
tools/rust/crates/cycle-status/src/: main.rs
tools/rust/crates/cycle-status/tests/: auto_cycle.rs
tools/rust/crates/derive-metrics/: Cargo.toml
tools/rust/crates/derive-metrics/src/: main.rs
tools/rust/crates/dispatch-review/: Cargo.toml
tools/rust/crates/dispatch-review/src/: main.rs
tools/rust/crates/dispatch-review/tests/: real_flow_cycle_495.rs
tools/rust/crates/dispatch-task/: Cargo.toml
tools/rust/crates/dispatch-task/src/: main.rs
tools/rust/crates/dispatch-task/tests/: dispatch_task_does_not_mutate_previous_worklog.rs
tools/rust/crates/housekeeping-scan/: Cargo.toml
tools/rust/crates/housekeeping-scan/src/: main.rs
tools/rust/crates/pipeline-check/: Cargo.toml
tools/rust/crates/pipeline-check/src/: main.rs
tools/rust/crates/pipeline-check/tests/: deferred_resolution_merge_gate.rs
tools/rust/crates/process-audit-inbound/: Cargo.toml
tools/rust/crates/process-audit-inbound/src/: main.rs
tools/rust/crates/process-eva/: Cargo.toml
tools/rust/crates/process-eva/src/: main.rs
tools/rust/crates/process-merge/: Cargo.toml
tools/rust/crates/process-merge/src/: main.rs
tools/rust/crates/process-merge/tests/: pushes_to_remote.rs
tools/rust/crates/process-review/: Cargo.toml
tools/rust/crates/process-review/src/: main.rs
tools/rust/crates/process-review/tests/: pushes_to_remote.rs
tools/rust/crates/record-dispatch/: Cargo.toml
tools/rust/crates/record-dispatch/src/: lib.rs  main.rs
tools/rust/crates/record-dispatch/tests/: pushes_to_remote.rs  real_flow_cycle_493.rs
tools/rust/crates/record-dispatch/tests/fixtures/: cycle-493-post-cycle-complete-state.json  cycle-495-post-cycle-complete-state.json
tools/rust/crates/refresh-field-inventory/: Cargo.toml
tools/rust/crates/refresh-field-inventory/src/: main.rs
tools/rust/crates/state-invariants/: Cargo.toml
tools/rust/crates/state-invariants/src/: main.rs
tools/rust/crates/verify-review-events/: Cargo.toml
tools/rust/crates/verify-review-events/src/: main.rs
tools/rust/crates/verify-review-events/tests/: auto_cycle.rs
tools/rust/crates/write-entry/: Cargo.toml
tools/rust/crates/write-entry/src/: main.rs  runner.rs
tools/rust/crates/write-entry/tests/: auto_blockers.rs  auto_cycle.rs  auto_review_summary_real_state.rs  post_dispatch_sync.rs  previous_commitment_met_validation.rs
ts/: tsup.config.ts  vitest.config.ts
(+1741 files in other folders)
