[package]
name = "backfill-dispatch"
version = "0.1.0"
edition = "2021"
description = "Backfill agent_sessions entries for gh-api-direct dispatches"

[dependencies]
clap = { version = "4", features = ["derive"] }
record-dispatch = { path = "../record-dispatch" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
