[package]
name = "backfill-sessions"
version = "0.1.0"
edition = "2021"
description = "Backfill historical agent_sessions entries from GitHub metadata"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
