[package]
name = "check-commitments"
version = "0.1.0"
edition = "2021"
description = "Extract cycle commitments from journal entries and flag deferred review findings"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
