[package]
name = "check-doc-pr"
version = "0.1.0"
edition = "2021"
description = "Validate documentation PRs against state.json and git history"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
