[package]
name = "check-eva-responses"
version = "0.1.0"
edition = "2021"
description = "Poll question-for-eva issues for newer EvaLok responses"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
