[package]
name = "check-field-inventory"
version = "0.1.0"
edition = "2021"
description = "Field inventory completeness check for state.json — replaces check-field-inventory.jq"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"
state-schema = { path = "../state-schema" }
