[package]
name = "cycle-close"
version = "0.1.0"
edition = "2021"
description = "Automate end-of-cycle commit, push, summary comment, and issue closing"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
