[package]
name = "cycle-complete"
version = "0.1.0"
edition = "2021"
description = "End-of-cycle automation helper for orchestrator completion tasks"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
