[package]
name = "cycle-runner"
version = "0.1.0"
edition = "2021"
description = "Top-level orchestrator cycle automation: startup and close-out sequences"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
