[package]
name = "cycle-status"
version = "0.1.0"
edition = "2021"
description = "Consolidated startup checklist report for orchestrator cycles"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
