[package]
name = "derive-metrics"
version = "0.1.0"
edition = "2021"
description = "Derives copilot_metrics from docs/state.json agent_sessions"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
