[package]
name = "pipeline-check"
version = "0.1.0"
edition = "2021"
description = "Unified verification pipeline for orchestrator checks"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
