[package]
name = "process-eva"
version = "0.1.0"
edition = "2021"
description = "Record Eva directive processing in docs/state.json"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
