[package]
name = "process-merge"
version = "0.1.0"
edition = "2021"
description = "Process merged PRs and update copilot_metrics in docs/state.json"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
