[package]
name = "process-merge"
version = "0.1.0"
edition = "2021"
description = "Process merged PRs and update dispatch session state in docs/state.json"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
