[package]
name = "process-review"
version = "0.1.0"
edition = "2021"
description = "Consume review markdown and update review_agent state history"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
