[package]
name = "record-dispatch"
version = "0.1.0"
edition = "2021"
description = "Record new Copilot dispatches in docs/state.json"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
