[package]
name = "refresh-field-inventory"
version = "0.1.0"
edition = "2021"
description = "Refreshes stale docs/state.json field inventory entries after verification"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
