[package]
name = "state-invariants"
version = "0.1.0"
edition = "2021"
description = "Semantic consistency checks for docs/state.json"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
