[package]
name = "verify-review-events"
version = "0.1.0"
edition = "2021"
description = "Verify merged PR review events and advance docs/state.json evidence markers"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state-schema = { path = "../state-schema" }
